unpackaged/main/default/objects/zkmulti__MultiPackageShipment__c/zkmulti__MultiPackageShipment__c.object-meta.xml
<CustomObject>
    <label>Consolidation</label>
    <nameField>
        <displayFormat>Consolidation-{0000}</displayFormat>
        <label>Consolidation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consolidations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>