unpackaged/main/default/objects/zkmulti__MultiPackageShipment__c/fields/zkmulti__Deleted__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>