unpackaged/main/default/objects/zkmulti__MultiPackageShipment__c/fields/zkmulti__MasterShipment__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__MasterShipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Shipment</label>
    <referenceTo>zkmulti__MCShipment__c</referenceTo>
    <relationshipLabel>Consolidations</relationshipLabel>
    <relationshipName>Consolidations</relationshipName>
    <type>Lookup</type>
</CustomField>