unpackaged/main/default/objects/zkmulti__MultiPackageShipment__c/fields/zkmulti__Preference__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Preference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preference</label>
    <referenceTo>zkmulti__MCShipmate_Preference__c</referenceTo>
    <relationshipLabel>Consolidations</relationshipLabel>
    <relationshipName>Consolidations</relationshipName>
    <type>Lookup</type>
</CustomField>