unpackaged/main/default/objects/zkmulti__MultiPackageShipment__c/fields/zkmulti__Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Consolidations</relationshipLabel>
    <relationshipName>Consolidations</relationshipName>
    <type>Lookup</type>
</CustomField>