unpackaged/main/default/objects/zkmulti__MultiPackageShipment__c/fields/zkmulti__Recipient_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Recipient_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Consolidations</relationshipLabel>
    <relationshipName>Consolidations</relationshipName>
    <type>Lookup</type>
</CustomField>