unpackaged/main/default/objects/zkmulti__MultiPackageShipment__c/fields/zkmulti__Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Ship_Date__c</fullName>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>