unpackaged/main/default/objects/zkmulti__MultiPackageShipment__c/recordTypes/zkmulti__Consolidation.recordType-meta.xml
<RecordType>
    <fullName>zkmulti__Consolidation</fullName>
    <active>true</active>
    <label>Consolidation</label>
</RecordType>