unpackaged/main/default/objects/zkmulti__MultiPackageShipment__c/recordTypes/zkmulti__Outbound_And_Return.recordType-meta.xml
<RecordType>
    <fullName>zkmulti__Outbound_And_Return</fullName>
    <active>true</active>
    <label>Outbound And Return</label>
</RecordType>